<resources>
    <string name="app_name">Audio Kit</string>
    <string name="search_hint">Search</string>
    <string name="menu_label_sort">Sort order</string>
    <string name="menu_label_filter">Filter</string>
    <string name="menu_label_show_hidden">Show hidden items</string>
    <string name="svc_player">Music Player</string>
    <string name="dialog_title_album_properties">Album properties</string>
    <string name="dialog_title_media_properties">Media properties</string>
    <string name="label_metadata_unknown">unknown</string>
    <string name="label_metadata_album_track_count">Track count</string>
    <string name="label_metadata_album_duration">Duration</string>
    <plurals name="label_metadata_album_artists">
        <item quantity="zero">Artist</item>
        <item quantity="one">Artist</item>
        <item quantity="other">Artists</item>
    </plurals>
    <plurals name="label_metadata_album_genres">
        <item quantity="zero">Genre</item>
        <item quantity="one">Genre</item>
        <item quantity="other">Genres</item>
    </plurals>
    <string name="label_metadata_media_uri">Path</string>
    <string name="label_metadata_media_duration">Duration</string>
    <string name="label_metadata_media_bitrate">Bitrate</string>
    <string name="label_metadata_media_samplerate">Samplerate</string>
    <string name="label_metadata_media_codec">Codec</string>
    <string name="label_metadata_media_score">Score</string>
    <string name="label_metadata_media_first_played">First played</string>
    <string name="label_metadata_media_last_played">Last played</string>
    <string name="label_metadata_media_title">Title</string>
    <string name="label_metadata_media_artist">Artist</string>
    <string name="label_metadata_media_album_artist">Album artist</string>
    <string name="label_metadata_media_album">Album</string>
    <string name="label_metadata_media_genre">Genre</string>
    <string name="label_metadata_media_year">Year</string>
    <string name="label_metadata_media_track">Track</string>
    <string name="label_metadata_media_disc">Disc</string>
    <string name="label_done">Done</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_player">Player</string>
    <string name="label_collection">Library</string>
    <string name="label_tracks">Songs</string>
    <string name="label_tag_editor">Metadata</string>
    <string name="label_preferences">Preferences</string>
    <string name="label_artist_details">Artist details</string>
    <string name="label_album_details">Album details</string>
    <string name="label_playlist_details">Playlist details</string>
    <string name="label_genre_details">Genre details</string>
    <string name="label_drawer_open">Open navigation menu</string>
    <string name="label_drawer_close">Close navigation menu</string>
    <string name="label_local_media_manager">Medias on this device</string>
    <string name="label_dlna_media_manager">Medias on the network (DLNA)</string>
    <string name="label_deezer_media_manager">Deezer</string>
    <string name="label_grooveshark_media_manager">Grooveshark</string>
    <string name="label_google_music_media_manager">Google Music</string>
    <string name="label_qobuz_media_manager">Qobuz</string>
    <string name="label_spotify_media_manager">Spotify</string>
    <string name="menu_label_search">Search</string>
    <string name="menu_label_collection">Library</string>
    <string name="menu_label_share">Share</string>
    <string name="menu_label_reload">Reload</string>
    <string name="menu_label_audio_effects">Audio effects</string>
    <string name="menu_label_sleep_timer">Sleep Timer</string>
    <string name="menu_label_ringtone">Use as ringtone</string>
    <string name="menu_label_toggle_car_mode">Car mode</string>
    <string name="menu_label_delayed_pause">Auto pause</string>
    <string name="menu_label_delayed_pause_in">Auto pause (%1$s)</string>
    <string name="menu_label_settings">Settings</string>
    <string name="menu_label_add_directory">Add directory</string>
    <string name="menu_label_add_library">Add a library</string>
    <string name="context_menu_play">Play</string>
    <string name="context_menu_play_next">Play next</string>
    <string name="context_menu_add_to_queue">Add to queue</string>
    <string name="context_menu_add_to_playlist">Add to playlist</string>
    <string name="context_menu_details">Properties</string>
    <string name="context_menu_more_by_artist">More by artist</string>
    <string name="context_menu_use_as_ringtone">Use as ringtone</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_remove">Remove</string>
    <string name="context_menu_remove_all">Clear playlist</string>
    <string name="context_menu_hide">Hide</string>
    <string name="context_menu_show">Unhide</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_use_file_art">Change this cover (from file)</string>
    <string name="context_menu_restore_file_art">Restore original cover</string>
    <string name="cd_art">Cover art</string>
    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>
    <string name="cd_shuffle">Shuffle tracks</string>
    <string name="cd_currently_playing">Currently playing</string>
    <string name="cd_playlist">Show/Hide playlist</string>
    <string name="cd_option_menu">Show option menu</string>
    <string name="tab_accept_path">Scanned</string>
    <string name="tab_exclude_path">Excluded</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_album_artists">Album Artists</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_songs">Songs</string>
    <string name="tab_playlists">Playlists</string>
    <string name="tab_genres">Genres</string>
    <string name="tab_storage">Files</string>
    <string name="mi_play_selection">Play selection</string>
    <string name="mi_uses_as_ringtone">Use as ringtone</string>
    <string name="mi_add_to_playlist">Add to playlist</string>
    <string name="mi_search">Search</string>
    <string name="mi_remove">Remove from this playlist</string>
    <string name="mi_add_media_manager">Type of media manager</string>
    <string name="ni_recents">No recently played tracks</string>
    <string name="ni_artists">No artists</string>
    <string name="ni_albums">No albums</string>
    <string name="ni_songs">No songs</string>
    <string name="ni_playlists">No playlists</string>
    <string name="ni_genres">No genres</string>
    <string name="ni_files">No files</string>
    <string name="ni_providers">No libraries</string>
    <string name="ni_artists_hint">Check files location</string>
    <string name="ni_albums_hint">Check files location</string>
    <string name="ni_songs_hint">Check files location</string>
    <string name="ni_genres_hint">Check files location</string>
    <string name="ni_current_playlist">Current playlist is empty</string>
    <string name="ni_scan_directories">No directories</string>
    <string name="fs_parent_directory">Parent directory</string>
    <string name="fs_directory">Directory</string>
    <string name="fs_audio">Audio File</string>
    <string name="header_interface">Interface</string>
    <string name="header_media_scanner">Media Scanner</string>
    <string name="header_about">About</string>
    <string name="label_filter_hint">Search</string>
    <string name="label_new_playlist">New playlist</string>
    <string name="label_new_library">New library</string>
    <string name="label_favorites">Favorites</string>
    <string name="share_via">Share via</string>
    <string name="share_body">I\'m currently listening %1$s by %2$s.</string>
    <string name="label_autostop">Pausing music in&#8230;</string>
    <plurals name="label_autostop_set">
        <item quantity="zero">Pausing music is disabled</item>
        <item quantity="one">Pausing music in %1$d minute</item>
        <item quantity="other">Pausing music in %1$d minutes</item>
    </plurals>
    <plurals name="label_track_position">
        <item quantity="zero">Empty playlist</item>
        <item quantity="one">%1$d tracks in playlist</item>
        <item quantity="other">%1$d tracks in playlist</item>
    </plurals>
    <string name="toast_press_back_again">Press BACK again to exit"</string>
    <string name="label_media_management">Media management</string>
    <string name="label_settings">Settings</string>
    <string name="label_library_settings">Manage libraries</string>
    <string name="label_library_settings_soundfx">Sound effects</string>
    <string name="label_library_settings_general">Library settings</string>
    <string name="label_application_settings">Application settings</string>
    <string name="label_widget_4x1">Lecteur Audio 4x1</string>
    <string name="label_widget_4x2">Lecteur Audio 4x2</string>
    <string name="label_start_app">Open audio player for medias</string>
    <string name="sort_A_Z">A-Z</string>
    <string name="sort_Z_A">Z-A</string>
    <string name="track_asc">Track # asc.</string>
    <string name="track_desc">Track # desc.</string>
    <string name="filename_A_Z">File name A-Z</string>
    <string name="filename_Z_A">File name Z-A</string>
    <string name="sort_artist_A_Z">Artist A-Z</string>
    <string name="sort_artist_Z_A">Artist Z-A</string>
    <string name="sort_album_A_Z">Album A-Z</string>
    <string name="sort_album_Z_A">Album Z-A</string>
    <string name="sort_number_of_songs">Number of songs</string>
    <string name="sort_number_of_albums">Number of albums</string>
    <string name="sort_year">Year</string>
    <string name="sort_duration">Duration</string>
    <string name="alert_title_playlist_is_empty">Playlist is empty</string>
    <string name="alert_playlist_is_empty">There is no tracks to play !\nFirst, add something in playlist.</string>
    <string name="alert_title_playlist_delete">Confirmation</string>
    <string name="alert_playlist_delete">Do you really want to delete this playlist ?</string>
    <string name="alert_title_art_change_tracks">Question</string>
    <string name="alert_art_change_tracks">Update tracks with this art ?</string>
    <string name="alert_title_search_path_exists">Path already registered</string>
    <string name="alert_search_path_exists">This folder is already to be analyzed or excluded.</string>
    <string name="label_prev">Previous</string>
    <string name="label_next">Next</string>
    <string name="label_finish">Finish</string>
    <string name="label_select_cover">Select cover</string>
    <string name="label_default_library">Music Library</string>
    <string name="label_scan_files">Files to scan</string>
    <string name="tutor_home_title">Settings</string>
    <string name="tutor_home_detail">Click on the application icon to access to player settings.\nYou can also slide the left side of the screen for the same effect.</string>
    <string name="tutor_library_management_title">Manage your libraries</string>
    <string name="tutor_library_management_detail">You can manage multiple libraries.\n\nClick this icon to add a library.\nYou can click on each library to set specific settings (like media paths, connection settings, etc.).</string>
    <string name="library_local_provider_path_settings_title">Search settings</string>
    <string name="library_local_provider_path_settings_desc">Here, you can define locations where media are stored for the library you are currently setting.\nMedias that are in excluded folders won\'t be added in this library.</string>
    <string name="library_global_settings_title">Libraries</string>
</resources>