<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/audio_controls_controls_height"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
         >

        <ImageButton
            android:id="@+id/audio_player_repeat"
            style="@style/PlayerButton"
            android:contentDescription="@string/cd_repeat"
            android:src="@drawable/ic_action_playback_repeat_off" />

        <eu.chepy.audiokit.ui.views.RepeatingImageButton
            android:id="@+id/audio_player_prev"
            style="@style/PlayerButton"
            android:contentDescription="@string/cd_previous"
            android:src="@drawable/ic_action_playback_prev" />

        <ImageButton
            android:id="@+id/audio_player_play"
            style="@style/PlayerButton"
            android:contentDescription="@string/cd_play"
            android:src="@drawable/ic_action_playback_play" />

        <eu.chepy.audiokit.ui.views.RepeatingImageButton
            android:id="@+id/audio_player_next"
            style="@style/PlayerButton"
            android:contentDescription="@string/cd_next"
            android:src="@drawable/ic_action_playback_next" />

        <ImageButton
            android:id="@+id/audio_player_shuffle"
            style="@style/PlayerButton"
            android:contentDescription="@string/cd_shuffle"
            android:src="@drawable/ic_action_playback_shuffle_off" />
    </LinearLayout>


</merge>